# BusinessOS

./: .claude-prime  .env.example  .env.test  .gitignore  00_START_HERE.md  AGENTS.md  AGENT_5_LOG.md  AGENT_6_IMPLEMENTATION_SUMMARY.md  API_DOCUMENTATION_SUMMARY.txt  ARMSTRONG_FIX_IMPLEMENTATION_GUIDE.md  ARMSTRONG_VIOLATION_ANALYSIS.md  BACKEND_READINESS_ASSESSMENT.md  BOS_CLI_ONTOLOGY_AUDIT.md  BOS_ONTOLOGY_SUMMARY.txt  CATEGORY_FILTERING_INDEX.md  CLAUDE.md  CLEANUP_REPORT.md  COMPLETE_SETUP_GUIDE.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_QUICK_REFERENCE.md  CONTEXT_HIERARCHY_VERIFICATION.md  CONTRIBUTING.md  DEVELOPMENT.md  E2E_TEST_RESULTS.md.bak  ELECTRON_WEB_PARITY_REPORT.md  FEATURES_DEPENDENCY_EXECUTIVE_SUMMARY.txt  FEATURES_DEPENDENCY_TREE.md  FIBO_INTEGRATION_INDEX.md  FIX_AUDIO_OUTPUT_NOW.md  FIX_LIVEKIT_CONNECTION.md  FORM_COMPONENTS_DELIVERY.md  HIPAA_IMPLEMENTATION_SUMMARY.md  HYBRID_VOICE_COMPLETE.md  MICROPHONE_INPUT_VERIFICATION.md  Makefile  OSA_INTEGRATION_GUIDE.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PR Review Summary BusinessOS Frontend API Modulari 2cf5ac02f07780e9b555c7c2d39ff0e1.md  PRESET_GALLERY_README.txt  PR_DESCRIPTION.md  (+63 more)
backend-go/: go.mod
bos/: Cargo.toml  DELIVERABLES.txt  INDEX.md  INTEGRATION_TESTS_README.md  INTEGRATION_TEST_SUMMARY.md  QUICK_TEST_REFERENCE.md  TEST_SUITE_COMPLETION_SUMMARY.md
bos/benches/: businessos_gateway_perf.rs
bos/cli/: Cargo.toml  libchaos_engineering_test.rlib
bos/cli/src/: main.rs  telemetry.rs
bos/cli/tests/: DECLARE_CONFORMANCE_README.md  README_YAWL_WCP_TESTS.md  YAWL_WCP_EXECUTION_GUIDE.md  YAWL_WCP_IMPLEMENTATION_REPORT.md  businessos_commands_integration_test.rs  chaos_engineering_test.rs  cli_pm4py_breakage_test.rs  compliance_framework_test.rs  comprehensive_integration_test.rs  conformance_parity_test.rs  declare_conformance_test.rs  discovery_parity_test.rs  fibo_integration_test.rs  fitness_precision_metrics_test.rs  footprints_advanced_parity_test.rs  gateway_mode_test.rs  healthcare_ontology_test.rs  io_parity_test.rs  mesh_commands_test.rs  pm4py_workflow_integration_test.rs  yawl_wcp1_10_test.rs
bos/config/: Cargo.toml  construct-gdpr.sparql  construct-hipaa.sparql  construct-soc2.sparql  construct-sox.sparql  gdpr-config.yaml  hipaa-config.yaml  soc2-config.yaml  sox-config.yaml
bos/config/src/: lib.rs
bos/core/: Cargo.toml  DISTRIBUTED_SUMMARY.md  DISTRIBUTED_TEST_RESULTS.txt
bos/core/src/: decisions.rs  export.rs  gateway.rs  knowledge.rs  lib.rs  registry.rs  schema.rs  streaming.rs  workspace.rs
bos/core/tests/: E2E_INTEGRATION_TEST_SUMMARY.md  E2E_TEST_GUIDE.md  E2E_TEST_VALIDATION.md  README_E2E_TESTS.md  armstrong_agi_live_validation_test.rs  bos_dm_sdk_integration_test.rs  compliance_engine_unit_test.rs  construct_integration_test.rs  data_mesh_unit_test.rs  distributed_integration_test.rs  fibo_deals_unit_test.rs  healthcare_phi_unit_test.rs  integration_e2e_test.rs  odcs_contract_validation_test.rs  otel_integration_test.rs  rdf_pipeline_integration_test.rs  sparql_registry_unit_test.rs  statistics_parity_test.rs  stub_replacement_bos_rust_test.rs  supervision_integration_test.rs  variant_filtering_test.rs  yawl_connector_test.rs
bos/docs/: DATA_MESH_IMPLEMENTATION.md  DATA_MESH_SUMMARY.md  DELIVERY_REPORT.md  FIBO_EXAMPLE_DEALS.md  FIBO_IMPLEMENTATION_SUMMARY.md  FIBO_SPARQL_QUERIES.md  HEALTHCARE_DELIVERY_SUMMARY.txt  HEALTHCARE_IMPLEMENTATION_DETAILS.md  HEALTHCARE_INDEX.md  HEALTHCARE_ONTOLOGY_IMPLEMENTATION.md  HEALTHCARE_QUICK_REFERENCE.md  MESH_IMPLEMENTATION_GUIDE.md  PROV_O_IMPLEMENTATION.md  SUPERVISION_IMPLEMENTATION_SUMMARY.md  SUPERVISION_QUICK_START.md  SUPERVISION_TREE_ARCHITECTURE.md  pm4py-rust-integration-architecture.md
bos/examples/: fhir_patients.json
bos/ingest/: Cargo.toml
bos/ingest/src/: lib.rs
bos/scripts/: run-integration-tests.sh
bos/src/: Cargo.toml  lib.rs  main.rs
bos/src/commands/: businessos_commands.rs  execution.rs  formatting.rs  mod.rs  progress.rs
bos/tests/: BOS_PROCESS_MINING_TEST_GUIDE.md  CHAOS_ARCHITECTURE_OVERVIEW.md  CHAOS_ENGINEERING_DELIVERY_SUMMARY.md  CHAOS_ENGINEERING_TEST_GUIDE.md  DELIVERY_CHECKLIST.md  INDEX.md  MI_PATTERNS_INDEX.md  MI_PATTERNS_TECHNICAL_REFERENCE.md  MULTI_INSTANCE_PATTERNS_SUMMARY.md  QUICK_START_MI_PATTERNS.md  README_CHAOS_ENGINEERING.md  README_PROCESS_MINING.md  README_STRESS_TESTING.md  STRESS_TEST_1B_EVENTS_SUMMARY.md  STRESS_TEST_DELIVERY_SUMMARY.txt  STRESS_TEST_IMPLEMENTATION_GUIDE.md  STRESS_TEST_OPTIMIZATION_ROADMAP.md  TEST_ADAPTATION_SUMMARY.md  YAWL_MULTI_INSTANCE_PATTERNS.md  YAWL_WCP11_20_TEST_SUMMARY.md  bos_process_mining_test.py  bos_weaver_live_check.rs  command_integration_test.rs  conformance_metrics_advanced_test.rs  conformance_parity_test.rs  fitness_precision_metrics_test.rs  gateway_integration_test.rs  integration_parity_test.rs  integration_smoke_test.rs  io_parity_test.rs  parity_matrix.json  pm4py_workflow_integration_test.rs  sample_account_events.csv  sample_account_events.json  stress_test_1b_events.rs  yawl_multi_instance_patterns_test.rs  yawl_wcp11_20_test.rs
bos/tests/data/: blocking_choice_ap3.xes  cancellation_ap4.xes  cancellation_region_ap5.xes  concurrent_state_machines_sbp5.xes  concurrent_test.xes  cyclic_state_transitions_sbp2.xes  cyclic_state_transitions_sbp2_fresh.xes  data_cleansing_dp7.xes  data_consistency_dp6.xes  data_driven_instances_dp10.xes  data_routing_dp5.xes  data_traceability_dp9.xes  data_versioning_dp8.xes  deferred_allocation_rp4.xes  deferred_choice_ap2.xes  generic_synchronization_ap7.xes  guard_conditions_sbp3.xes  guard_conditions_test.xes  implicit_choice_ap1.xes  object_branching_of5.xes  object_collection_of7.xes  object_consumption_of3.xes  object_decomposition_of8.xes  object_merging_of6.xes  object_modification_of2.xes  object_states_of4.xes  pool_based_allocation_rp3.xes  resource_escalation_rp8.xes  resource_merge_rp6.xes  resource_split_rp5.xes  resource_sync_rp7.xes  role_based_allocation_rp2.xes  state_history_sbp4.xes  state_machine_sbp1.xes  state_machine_sbp1_test.xes  structured_loop_ap6.xes  (+2 more)
(+3526 files in other folders)
