[package]
name = "bos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "BusinessOS data layer CLI — ODCS workspace operations, schema management, and data pipelines"

[[bin]]
name = "bos"
path = "src/main.rs"

[dependencies]
bos-core = { path = "../core" }
bos-ingest = { path = "../ingest" }
bos-config = { path = "../config" }

# Process Mining
pm4py = { path = "/Users/sac/chatmangpt/pm4py-rust" }

clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
clap-noun-verb = { workspace = true, features = ["async"] }
clap-noun-verb-macros = { workspace = true }
linkme = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
fxhash = "0.2"
uuid = { workspace = true }

[dev-dependencies]
# For CLI integration testing
assert_cmd = "2.0"
tempfile = "3"
predicates = "3"
