[package]
name = "bos-commands"
version.workspace = true
edition.workspace = true
description = "BusinessOS command dispatch library and bosctl CLI"

[lib]
name = "bos_commands"
path = "lib.rs"

[[bin]]
name = "bosctl"
path = "main.rs"

[dependencies]
bos-core   = { path = "../core" }
bos-ingest = { path = "../ingest" }
clap       = { workspace = true, features = ["derive", "env"] }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
tempfile = "3"
